packages/tree-sitter-openscad/grammar.js
    source_file: ($) => repeat($.statement),

    statement: ($) =>
      choice(
        $.assignment_statement,
        $.module_definition,
        $.function_definition,
        $.module_instantiation,
        $.include_statement,
        $.use_statement,
        $.if_statement,
        $.for_statement,
        $.echo_statement,
        $.assert_statement,
        $.block
      ),

    // Basic statements
    assignment_statement: ($) =>
      seq(
        field('name', choice($.identifier, $.special_variable)),
        '=',
        field('value', $._value),
        optional(';')
      ),

    module_definition: ($) =>
      seq(
        'module',
        field('name', $.identifier),
        field('parameters', $.parameter_list),
        field('body', $.block)
      ),

    function_definition: ($) =>
      seq(
        'function',
        field('name', $.identifier),
        field('parameters', $.parameter_list),
        '=',
        field('value', $._value),
        optional(';')
      ),

    parameter_list: ($) =>
      seq(
        '(',
        optional($.parameter_declarations),
        choice(
          ')',
          // Error recovery for missing closing parenthesis
          prec(-1, token.immediate(/[;{]/)) // Recover at semicolon or opening brace
        )
      ),

    parameter_declarations: ($) => commaSep1($.parameter_declaration),

    parameter_declaration: ($) =>
      choice($.identifier, seq($.identifier, '=', $._value)),

    block: ($) =>
      seq(
        '{',
        repeat($.statement),
        choice(
          '}',
          // Error recovery for missing closing brace
          prec(-1, token.immediate(/[;}]/)) // Recover at semicolon or another brace
        )
      ),

    // Module instantiation with precedence
    module_instantiation: ($) =>
      choice(
        prec(
          2,
          seq(
            optional($.modifier),
            field('name', $.identifier),
            field('arguments', $.argument_list),
            ';'
          )
        ),
        prec(
          2,
          seq(
            optional($.modifier),
            field('name', $.identifier),
            field('arguments', $.argument_list),
            $.block
          )
        ),
        prec(
          1,
          seq(
            optional($.modifier),
            field('name', $.identifier),
            field('arguments', $.argument_list),
            $.statement
          )
        )
      ),

    modifier: ($) => choice('#', '!', '%', '*'),

    argument_list: ($) =>
      seq(
        '(',
        optional($.arguments),
        choice(
          ')',
          // Error recovery for missing closing parenthesis
          prec(-1, token.immediate(/[;{]/)) // Recover at semicolon or opening brace
        )
      ),

    argument: ($) =>
      choice(
        $._value,
        seq(field('name', $.identifier), '=', field('value', $._value)),
        seq(field('name', $.special_variable), '=', field('value', $._value))
      ),

    // Import statements
    include_statement: ($) =>
      seq('include', choice($.string, $.angle_bracket_string), optional(';')),
    use_statement: ($) =>
      seq('use', choice($.string, $.angle_bracket_string), optional(';')),

    // Control flow
    for_statement: ($) =>
      prec(
        1,
        seq(
          'for',
          '(',
          field('iterator', $.identifier),
          '=',
          field('range', $._value),
          ')',
          choice($.block, $.statement)
        )
      ),

    // Action statements
    arguments: ($) => commaSep1($.argument),

    // Primary expressions for the most basic literals and identifiers
    primary_expression: ($) =>
      choice(
        $.identifier,
        $.special_variable,
        $.number,
        $.string,
        $.boolean,
        $.undef,
        $.vector_expression,
        $.parenthesized_expression
      ),

    // Expression rule that includes all expression types
    expression: ($) =>
      choice(
        $.primary_expression,
        $.binary_expression,
        $.unary_expression,
        $.conditional_expression,
        $.call_expression,
        $.index_expression,
        $.member_expression,
        $.let_expression,
        $.range_expression,
        $.list_comprehension
      ),

    // Unified value rule with direct access strategy (no expression wrapping)
    _value: ($) =>
      choice(
        // Literals - direct access
        $.number,
        $.string,
        $.boolean,
        $.undef,
        $.identifier,
        $.special_variable,

        // Complex expressions - direct access (prioritize ranges over vectors)
        prec.dynamic(10, $.range_expression), // High priority for [start:end] syntax
        $.vector_expression,
        $.binary_expression,
        $.unary_expression,
        $.conditional_expression,
        $.call_expression,
        $.index_expression,
        $.member_expression,
        $.let_expression,
        $.list_comprehension,
        $.parenthesized_expression
      ),

    // Vector element rule - excludes ranges to prevent parsing conflicts
    // Used specifically in vector_expression to avoid [start:end] being parsed as vector
    _vector_element: ($) =>
      choice(
        // Literals - direct access
        $.number,
        $.string,
        $.boolean,
        $.undef,
        $.identifier,
        $.special_variable,

        // Complex expressions - direct access (excluding range expressions)
        $.vector_expression,
        $.binary_expression,
        $.unary_expression,
        $.conditional_expression,
        $.call_expression,
        $.index_expression,
        $.member_expression,
        $.let_expression,
        // Removed range expressions to prevent ambiguity with [start:end] syntax
        $.list_comprehension,
        $.parenthesized_expression
      ),

    // Non-recursive value rule for list comprehension expressions
    // Completely separate expression rules to prevent ANY recursion back to list_comprehension
    // Uses aliasing to maintain expected AST node names while preventing recursion
    _non_list_comprehension_value: ($) =>
      choice(
        // Literals - direct access
        $.number,
        $.string,
        $.boolean,
        $.undef,
        $.identifier,
        $.special_variable,

        // Non-recursive expressions - aliased to regular node names for consistent AST output
        // Range expressions with absolute priority to prevent [start:end] being parsed as vector
        prec.dynamic(
          2000,
          alias($.range_expression_non_recursive, $.range_expression)
        ),
        prec(
          -100,
          alias($.vector_expression_non_recursive, $.vector_expression)
        ),
        alias($.binary_expression_non_recursive, $.binary_expression),
        alias($.unary_expression_non_recursive, $.unary_expression),
        alias($.conditional_expression_non_recursive, $.conditional_expression),
        alias($.call_expression_non_recursive, $.call_expression),
        alias($.index_expression_non_recursive, $.index_expression),
        alias($.member_expression_non_recursive, $.member_expression),
        alias(
          $.parenthesized_expression_non_recursive,
          $.parenthesized_expression
        )
      ),

    binary_expression: ($) =>
      choice(
        // Logical operators
        prec.left(
          1,
          seq(
            field('left', $._value),
            field('operator', alias('||', $.logical_or_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          2,
          seq(
            field('left', $._value),
            field('operator', alias('&&', $.logical_and_operator)),
            field('right', $._value)
          )
        ),

        // Equality operators
        prec.left(
          3,
          seq(
            field('left', $._value),
            field('operator', alias('==', $.equality_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          3,
          seq(
            field('left', $._value),
            field('operator', alias('!=', $.inequality_operator)),
            field('right', $._value)
          )
        ),

        // Relational operators
        prec.left(
          4,
          seq(
            field('left', $._value),
            field('operator', alias('<', $.less_than_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          4,
          seq(
            field('left', $._value),
            field('operator', alias('<=', $.less_equal_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          4,
          seq(
            field('left', $._value),
            field('operator', alias('>', $.greater_than_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          4,
          seq(
            field('left', $._value),
            field('operator', alias('>=', $.greater_equal_operator)),
            field('right', $._value)
          )
        ),

        // Additive operators
        prec.left(
          5,
          seq(
            field('left', $._value),
            field('operator', alias('+', $.addition_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          5,
          seq(
            field('left', $._value),
            field('operator', alias('-', $.subtraction_operator)),
            field('right', $._value)
          )
        ),

        // Multiplicative operators
        prec.left(
          6,
          seq(
            field('left', $._value),
            field('operator', alias('*', $.multiplication_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          6,
          seq(
            field('left', $._value),
            field('operator', alias('/', $.division_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          6,
          seq(
            field('left', $._value),
            field('operator', alias('%', $.modulo_operator)),
            field('right', $._value)
          )
        ),

        // Exponentiation
        prec.right(
          7,
          seq(
            field('left', $._value),
            field('operator', alias('^', $.exponentiation_operator)),
            field('right', $._value)
          )
        )
      ),

    unary_expression: ($) =>
      choice(
        prec.right(
          8,
          seq(
            field('operator', alias('!', $.logical_not_operator)),
            field('operand', $._value)
          )
        ),
        prec.right(
          8,
          seq(
            field('operator', alias('-', $.unary_minus_operator)),
            field('operand', $._value)
          )
        )
      ),

    conditional_expression: ($) =>
      prec.right(
        0,
        seq(
          field('condition', $._value),
          '?',
          field('consequence', $._value),
          ':',
          field('alternative', $._value)
        )
      ),

    call_expression: ($) =>
      prec.left(
        12,
        seq(
          field('function', $.identifier),
          field('arguments', $.argument_list)
        )
      ),

    index_expression: ($) =>
      prec.left(
        12,
        seq(field('array', $._value), '[', field('index', $._value), ']')
      ),

    parenthesized_expression: ($) =>
      seq(
        '(',
        $._value,
        choice(
          ')',
          // Error recovery for missing closing parenthesis
          prec(-1, token.immediate(/[;{]/)) // Recover at semicolon or opening brace
        )
      ),

    let_expression: ($) =>
      prec.dynamic(
        100,
        seq(
          'let',
          '(',
          commaSep1($.let_assignment),
          choice(
            ')',
            // Error recovery for missing closing parenthesis
            prec(-1, token.immediate(/[;{]/)) // Recover at semicolon or opening brace
          ),
          field('body', $._value)
        )
      ),

    let_assignment: ($) =>
      seq(field('name', $.identifier), '=', field('value', $._value)),

    // Range element rule - excludes range expressions to prevent circular dependency
    _range_element: ($) =>
      choice(
        // Literals - direct access
        $.number,
        $.string,
        $.boolean,
        $.undef,
        $.identifier,
        $.special_variable,

        // Complex expressions - direct access (excluding range expressions)
        $.vector_expression,
        $.binary_expression,
        $.unary_expression,
        $.conditional_expression,
        $.call_expression,
        $.index_expression,
        $.member_expression,
        $.let_expression,
        $.list_comprehension,
        $.parenthesized_expression
      ),

    // Range expression with direct field access - highest precedence for [start:end] syntax
    range_expression: ($) =>
      choice(
        // Bracketed range expressions [start:end] or [start:step:end]
        prec.dynamic(
          200,
          seq(
            '[',
            field('start', $._range_element),
            ':',
            field('end', $._range_element),
            ']'
          )
        ),
        prec.dynamic(
          200,
          seq(
            '[',
            field('start', $._range_element),
            ':',
            field('step', $._range_element),
            ':',
            field('end', $._range_element),
            ']'
          )
        ),
        // Bare range expressions start:end or start:step:end (for use in other contexts)
        prec.left(
          5,
          seq(
            field('start', $._range_element),
            ':',
            field('end', $._range_element)
          )
        ),
        prec.left(
          5,
          seq(
            field('start', $._range_element),
            ':',
            field('step', $._range_element),
            ':',
            field('end', $._range_element)
          )
        )
      ),

    // Hidden bracketed range expressions for backward compatibility
    vector_expression: ($) =>
      prec(
        1,
        seq(
          '[',
          commaSep($._vector_element),
          choice(
            ']',
            // Error recovery for missing closing bracket
            prec(-1, token.immediate(/[;{]/)) // Recover at semicolon or opening brace
          )
        )
      ),

    // List comprehension with correct syntax order
    // Syntax: [for (i = range) expr] or [for (i = range) if (condition) expr]
    // Uses non-recursive value rule to prevent recursion in expr field
    list_comprehension: ($) =>
      prec.dynamic(
        100,
        seq(
          '[',
          $.list_comprehension_for,
          optional(
            seq(
              'if',
              '(',
              field('condition', $._non_list_comprehension_value),
              ')'
            )
          ),
          field('expr', $._non_list_comprehension_value),
          ']'
        )
      ),

    list_comprehension_for: ($) =>
      seq(
        'for',
        '(',
        field('iterator', $.identifier),
        '=',
        field('range', $._non_list_comprehension_value),
        ')'
      ),

    // Literals
    identifier: ($) => /[A-Za-z_][A-Za-z0-9_]*/,

    number: ($) => {
      const decimal = /[0-9]+\.[0-9]+([eE][-+]?[0-9]+)?/;
      const integer = /[0-9]+([eE][-+]?[0-9]+)?/;
      return token(choice(decimal, integer));
    },

    angle_bracket_string: ($) => seq('<', /[^>]*/, '>'),

    boolean: ($) => choice('true', 'false'),

    special_variable: ($) => /\$[A-Za-z_][A-Za-z0-9_]*/,
